--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,9 @@ body {
   justify-content: center;
   font-family: "Ubuntu", sans-serif;
 }
+
+#root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
