--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   align-items: center;
   justify-content: center;
   font-family: "Ubuntu", sans-serif;
+  background-color: rgb(209, 242, 235);
 }
 
 #root {
